tests/type-errors/compare_list_list.arl
archetype compare_list_list

action exec() {
  effect {
    var a : int list = [0];
    var b : int list = [1];
    require (a = b)
  }
}
